--- a/examples/chat/index.html
+++ b/examples/chat/index.html
@@ -46,7 +46,7 @@
 			</tr>
 		</table>
 	</div>
-	<script src="script/logic.js"></script>
+	<script src="script/client_logic.js"></script>
 	<script src="script/we_client.js"></script>
 	<script>
 		we_client.init("we_api/");
