--- a/examples/chat/join.html
+++ b/examples/chat/join.html
@@ -44,7 +44,7 @@
 			</tr>
 		</table>
 	</div>
-	<script src="script/logic.js"></script>
+	<script src="script/client_logic.js"></script>
 	<script src="script/we_client.js"></script>
 	<script>
 		params={};location.search.replace(/[?&]+([^=&]+)=([^&]*)/gi,function(s,k,v){params[k]=v});
