changed to auto start (catch_mind example)

--- a/examples/catch_mind/index.html
+++ b/examples/catch_mind/index.html
@@ -16,7 +16,7 @@
 	<hr class="m-0"/>
 	<div class="bg-light">
 	<div class="container">
-		<table class="border-left border-right bg-white">
+		<table class="border-left border-right bg-white" style="min-height:605px;">
 		<tr>
 			<td style="width:645px;vertical-align: top;border-right:1px solid #e5e5e5;">
 				<div id="rooms">
